Added Results when match done

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <p id="orario"></p>
                 </div>
                 <div class="risultato">
-                    <p>SCONTRO DIRETTO</p>
+                    <p id="scontro-diretto-label">SCONTRO DIRETTO</p>
                     <h1 id="scontro-diretto"></h1>
                 </div>
             </div>
