--- a/torneo.html
+++ b/torneo.html
@@ -49,7 +49,7 @@
                     <p id="orario"></p>
                 </div>
                 <div class="risultato">
-                    <p>SCONTRO DIRETTO</p>
+                    <p id="scontro-diretto-label">SCONTRO DIRETTO</p>
                     <h1 id="scontro-diretto"></h1>
                 </div>
             </div>
