--- a/token.html
+++ b/token.html
@@ -27,11 +27,9 @@
         </a>
     </div>
 
-    <section class="main">
-        Token
+    <section class="main" style="margin-top: 200px;">
+        <a href="https://accounts.google.com/o/oauth2/auth?client_id=14536006715-6cm2ajnipa0qr8v1s5ot1h2e5jrmg14s.apps.googleusercontent.com&redirect_uri=https://fabriziogasparini.github.io/SpikeBot/redirect.html&response_type=code&scope=openid%20email%20profile">Token</a>
     </section>
-    <a href="torneo.html" class="pagina"><p>Pagina Torneo</p></a>
-    <a href="index.html" class="pagina"><p>Pagina Campionati</p></a>
 </body>
 
 </html>
